--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,29 +7,29 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-query": "^3.39.3",
-    "axios": "^1.3.4",
-    "react-hook-form": "^7.43.5",
-    "react-hot-toast": "^2.4.0",
+    "@tanstack/react-query": "^4.29.5",
+    "axios": "^1.5.0",
+    "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "lucide-react": "^0.263.1",
-    "clsx": "^1.2.1",
-    "tailwind-merge": "^1.13.2",
-    "date-fns": "^2.29.3",
-    "recharts": "^2.5.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^1.14.0",
+    "date-fns": "^2.30.0",
+    "recharts": "^2.8.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@types/react-beautiful-dnd": "^13.1.4",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.4",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "@vitejs/plugin-react": "^4.0.3",
+    "vite": "^4.4.5",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "dev": "vite",
