--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       args:
         NODE_ENV: production
     container_name: projektseite-frontend
+    environment:
+      REACT_APP_API_URL: http://backend:3001/api
     ports:
       - "3000:3000"
     depends_on:
