--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,88 +1,190 @@
-# Docker Compose Konfiguration für Projektseite
+# Docker Compose für Projektseite v3.0
+# Development und Production Setup
+
+version: '3.8'
 
 services:
-  # PostgreSQL Datenbank
+  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
     container_name: projektseite-postgres
+    restart: unless-stopped
     environment:
       POSTGRES_DB: projektseite
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: secure_password_123
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./database/init:/docker-entrypoint-initdb.d
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d
     networks:
       - projektseite-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d projektseite"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Redis (für Caching und Sessions)
+  redis:
+    image: redis:7-alpine
+    container_name: projektseite-redis
     restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - projektseite-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Backend API
   backend:
     build:
-      context: ../backend
+      context: ../server
       dockerfile: Dockerfile
-      args:
-        NODE_ENV: production
     container_name: projektseite-backend
+    restart: unless-stopped
     environment:
       NODE_ENV: production
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_NAME: projektseite
-      DB_USER: admin
-      DB_PASSWORD: secure_password_123
-      JWT_SECRET: your_jwt_secret_key_here
+      PORT: 3001
+      DATABASE_URL: postgresql://admin:secure_password_123@postgres:5432/projektseite?schema=public
+      JWT_SECRET: your-super-secret-jwt-key-change-this-in-production
+      JWT_EXPIRES_IN: 24h
+      REDIS_URL: redis://redis:6379
+      FRONTEND_URL: http://localhost:3000
     ports:
       - "3001:3001"
+    volumes:
+      - ../server:/app
+      - /app/node_modules
+      - backend_logs:/app/logs
+      - backend_uploads:/app/uploads
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
       - projektseite-network
-    restart: unless-stopped
-    volumes:
-      - ../shared:/app/shared
-      - ../database:/app/database
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Frontend Admin-Interface
+  # Frontend App
   frontend:
     build:
-      context: ../frontend
+      context: ../client
       dockerfile: Dockerfile
-      args:
-        NODE_ENV: production
     container_name: projektseite-frontend
+    restart: unless-stopped
     environment:
-      REACT_APP_API_URL: http://backend:3001/api
+      REACT_APP_API_URL: http://localhost:3001/api
+      REACT_APP_ENVIRONMENT: production
     ports:
-      - "3000:3000"
+      - "3000:80"
+    volumes:
+      - ../client:/app
+      - /app/node_modules
     depends_on:
       - backend
     networks:
       - projektseite-network
-    restart: unless-stopped
-    volumes:
-      - ../shared:/app/shared
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Grafana für Monitoring
+  # Nginx Reverse Proxy
+  nginx:
+    image: nginx:alpine
+    container_name: projektseite-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl:/etc/nginx/ssl
+      - nginx_logs:/var/log/nginx
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - projektseite-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Monitoring - Prometheus
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: projektseite-prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    networks:
+      - projektseite-network
+
+  # Monitoring - Grafana
   grafana:
     image: grafana/grafana:latest
     container_name: projektseite-grafana
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
     environment:
       GF_SECURITY_ADMIN_PASSWORD: admin123
-    ports:
-      - "3002:3000"
+      GF_USERS_ALLOW_SIGN_UP: false
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
+      - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
+    depends_on:
+      - prometheus
     networks:
       - projektseite-network
-    restart: unless-stopped
 
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+  backend_logs:
+    driver: local
+  backend_uploads:
+    driver: local
+  nginx_logs:
+    driver: local
+  prometheus_data:
+    driver: local
   grafana_data:
+    driver: local
 
 networks:
   projektseite-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
