--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,4 +1,4 @@
-# Development Dockerfile for Backend
+# Development Dockerfile for Frontend
 FROM node:18-alpine
 
 # Set working directory
@@ -14,7 +14,7 @@ RUN npm install --include=dev
 COPY . .
 
 # Expose port
-EXPOSE 3001
+EXPOSE 3000
 
 # Start development server
 CMD ["npm", "run", "dev"]
