--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": "./",
     "paths": {
       "@shared/*": ["./*"]
-    }
+    },
+    "composite": true
   },
   "include": [
     "**/*.ts"
